# AdventOfCode

./: .gitignore  pom.xml
AoC2015/: pom.xml
AoC2015/src/main/kotlin/: Day01.kt  Day02.kt  Day03.kt  Day04.kt  Day05.kt  Day06.kt  Day07.kt  Day08.kt  Day09.kt  Day10.kt  Day11.kt  Day12.kt  Day13.kt  Day14.kt  Day15.kt  Day16.kt  Day17.kt  Day18.kt  Day20.kt  DayTemplate.kt  Geometry.kt
AoC2015/src/main/kotlin/day01/: Part2.java
AoC2017/: CMakeLists.txt  main.cpp
AoC2017/src/BaseDay/: BaseDay.cpp
AoC2017/src/Day01/: Day01.cpp  Day01.h
AoC2017/src/Day02/: Day02.cpp  Day02.h
AoC2017/src/Day03/: Day03.cpp  Day03.h
AoC2017/src/Day04/: Day04.cpp  Day04.h
AoC2017/src/Day05/: Day05.cpp  Day05.h
AoC2017/src/Day06/: Day06.cpp  Day06.h
AoC2017/src/Day07/: Day07.cpp  Day07.h
AoC2017/src/util/: Util.h
AoC2021/: pom.xml
AoC2021/src/main/kotlin/day01/: Part1.java
AoC2021/src/main/kotlin/day02/: Part1.java  Part2.java
AoC2021/src/main/kotlin/day03/: Part1.java
AoC2021/src/main/kotlin/day04/: Part1.java  Part2.java
AoC2021/src/main/kotlin/day06/: Part2.java
AoC2021/src/main/kotlin/day07/: Part1.java
AoC2021/src/main/kotlin/day09/: Part2.java
AoC2021/src/main/kotlin/day10/: Part1.java  Part2.java
AoC2021/src/main/kotlin/day11/: Part1.java  Part2.java
AoC2021/src/main/kotlin/day12/: PassagePathing.kt
AoC2021/src/main/kotlin/day13/: Part1.java  Part2.java
AoC2021/src/main/kotlin/day14/: Part1.java  Part2.java
AoC2021/src/main/kotlin/day15/: Chiton.kt
AoC2021/src/main/kotlin/day16/: Part1.java  Part2.java
AoC2021/src/main/kotlin/day17/: Part1.java  Part2.java
AoC2021/src/main/kotlin/day18/: Snailfish.kt
AoC2021/src/main/kotlin/day19/: BeaconScanner.kt
AoC2021/src/main/kotlin/day20/: TrenchMap.kt
AoC2022/: pom.xml
AoC2022/src/main/kotlin/: Day01.kt  Day02.kt  Day03.kt  Day04.kt  Day05.kt  Day06.kt  Day07.kt  DayTemplate.kt  Extensions.kt
AoC2023/: pom.xml
AoC2023/src/main/kotlin/: Day01.kt  Day01.py  Day02.kt  Day03.kt  Day04.kt  Day05.kt  Day06.kt  Day07.kt  Day08.kt  Day09.kt  Day10.kt  Day11.kt  Day12.kt  Day13.kt  Day14.kt  Extensions.kt  Geometry.kt
AoC2024/: .gitignore  CMakeLists.txt  input.txt  main.cpp
AoC2024/src/: RandomTests.cpp
AoC2024/src/BaseDay/: BaseDay.h
AoC2024/src/Day01/: Day01.cpp  Day01.h  day01.txt
AoC2024/src/Day02/: Day02.cpp  Day02.h
AoC2024/src/Day03/: Day03.cpp  Day03.h
AoC2024/src/Day04/: Day04.cpp  Day04.h
AoC2024/src/Day05/: Day05.cpp  Day05.h
AoC2024/src/Day06/: Day06.cpp  Day06.h
AoC2024/src/Day07/: Day07.cpp  Day07.h
AoC2024/src/Day08/: Day08.cpp  Day08.h
AoC2024/src/Day09/: Day09.cpp  Day09.h
AoC2024/src/Day10/: Day10.cpp  Day10.h
AoC2024/src/Day11/: Day11.cpp  Day11.h
AoC2024/src/Day12/: Day12.cpp  Day12.h
AoC2024/src/Day13/: Day13.cpp  Day13.h
AoC2024/src/Day14/: Day14.cpp  Day14.h  Day14PartTwo.js
AoC2024/src/Day15/: Day15.cpp  Day15.h
AoC2024/src/Day16/: Day16.cpp  Day16.h
AoC2024/src/Day17/: Day17.cpp  Day17.h
AoC2024/src/Day18/: Day18.cpp  Day18.h
AoC2024/src/Day19/: Day19.cpp  Day19.h
AoC2024/src/Day20/: Day20.cpp  Day20.h
AoC2024/src/Day21/: Day21.cpp  Day21.h
AoC2024/src/Day22/: Day22.cpp  Day22.h
AoC2024/src/util/: Util.cpp  Util.h
src/aoc2015/day01/: Part1.java
src/aoc2021/day02/: Part1.java  Part2.java
src/aoc2021/day04/: Part1.java  Part2.java
src/aoc2021/day05/: Part2.java
src/aoc2021/day06/: Part1.java
src/aoc2021/day07/: Part1.java
src/aoc2021/day08/: Part1.java
src/aoc2021/day10/: Part2.java
src/aoc2021/day11/: Part1.java  Part2.java
src/aoc2021/day14/: Part1.java  Part2.java
src/day01/: Part2.java
src/day03/: Part2.java
src/day04/: Part1.java  Part2.java
src/day05/: Part1.java  Part2.java
src/day06/: Part1.java
src/day07/: Part2.java
src/day08/: Part1.java  Part2.java
src/day09/: Part1.java
src/day1/: Part1.java  Part2.java
src/day10/: Part1.java  Part2.java
src/day11/: Part1.java  Part2.java
src/day13/: Part1.java  Part2.java
src/day14/: Part1.java  Part2.java
src/day16/: Part1.java  Part2.java
src/day17/: Part1.java  Part2.java
src/day2/: Part1.java  Part2.java
src/day3/: Part1.java  Part2.java
src/day4/: Part1.java  Part2.java
src/day5/: Part1.java  Part2.java
src/day6/: Part1.java  Part2.java
src/day7/: Part1.java  Part2.java
src/day8/: Part1.java  Part2.java
src/day9/: Part1.java  Part2.java
src/main/kotlin/utils/: InputReader.java
(+26 files in other folders)
